@@ -1,4 +1,4 @@
 DIST netbeans-6.5beta-200808111757-src.zip 272651333 RMD160 3746042139c8debb60fa704caa98f8a313111ff0 SHA1 4cdc0647fa4f7a56a3c45f9a38b221738b6ec2ea SHA256 5661174f11ef0548fabb39e6511dce5843fe84aa67bcb03e3255ad52095af4b4
-EBUILD netbeans-6.5_beta.ebuild 30801 RMD160 f69fdb65022a5388ef32a5819b53b416cd30808a SHA1 bb764f9e37b4dacc1e17fac1443a36723a611d39 SHA256 b62631823587b7337ddf5aa50c406a4af84e9871564cc33d7e70b15897035d2d
-MISC ChangeLog 26068 RMD160 b93b5ac5d9d879b7b5055932841b1131e9db25f0 SHA1 893bd42a44b32d8f8a09870ba87286591d449dfd SHA256 a3db4a51dfbf88e2c4fa29076a89fe0ab86c6566ac8fa756f2352f6348388a0c
+EBUILD netbeans-6.5_beta.ebuild 33158 RMD160 9157cb1b87e7d2703b9f43717a2ce3aa635d7046 SHA1 3c6b206746764835944883b901e15f3a6d7bf5df SHA256 6ed690e9c858a29955b2d8e5df650780d0c35d4d250cea505697f21eef7d22f8
+MISC ChangeLog 26204 RMD160 cbefa2bb12e2877dd603e8e55d77a6b0a5684b21 SHA1 e2c941120a683a4ec8238bb8db97ca97d63e583d SHA256 a493641d91d1c3409662f767b37d38f0fe166fcfb59a93786b809bc7554ceb54
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
